changing params of spark-submit in run-spark file